# odepack

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  ODEPACK_Python_Tutorial.ipynb  README.md  _integrate.pyi  adaptive_rk.hpp  build.sh  check.py  compile_commands.json  install.sh  ode.hpp  odepack.pyi  odesolvers.hpp  pyode.cpp  pyode.hpp  pytest.pyi  stiff.hpp  test  test.cpp  tools.hpp
cmake/: external.cmake  odepackConfig.cmake.in
include/: ODEPACK.hpp  PyMain.hpp  PySolve.hpp  PySolve_IMPL.hpp  PythonOde.hpp  mpreal_fast.hpp  odepack.hpp  odepackDecl.hpp  odepack_.hpp  pyodehead.hpp  pyodepack.hpp  pyodepackDecl.hpp  pyodepack_impl.hpp
include/mcmc/: mcmc.hpp
include/ndspan/: arrays.hpp  iterators.hpp  layoutmap.hpp  ndspan.hpp  ndtools.hpp  ndview.hpp  network.hpp
include/ndspan/layouts/: morton.hpp  standard_layouts.hpp
include/ode/: CustomSolver.hpp  OdeInt.hpp  OdeInt_IMPL.hpp  OdeInt_impl.hpp  SolverDispatcher.hpp  SolverDispatcher_IMPL.hpp  SolverDispatcher_impl.hpp  SolverState.hpp  SolverState_IMPL.hpp  SolverState_impl.hpp  Tools.hpp  Tools_IMPL.hpp  Tools_impl.hpp
include/ode/Chaos/: Chaos_IMPL.hpp  Chaos_impl.hpp  VariationalSolvers.hpp  VariationalSolvers_impl.hpp
include/ode/Core/: Core_IMPL.hpp  Core_impl.hpp  Events.hpp  Events_impl.hpp  ObjectiveSolver.hpp  RichBase.hpp  RichBase_impl.hpp  SolverBase.hpp  SolverBase_IMPL.hpp  SolverBase_impl.hpp  VirtualBase.hpp  VirtualBase_IMPL.hpp
include/ode/Interpolation/: GridInterp.hpp  GridInterp_IMPL.hpp  GridInterp_impl.hpp  Interpolation_IMPL.hpp  Interpolation_impl.hpp  Interpolators.hpp  Interpolators_impl.hpp  LinearNdInterpolator.hpp  LinearNdInterpolator_IMPL.hpp  LinearNdInterpolator_impl.hpp  NdInterpolator.hpp  NdInterpolator_impl.hpp  SampledVectorfields.hpp  SampledVectorfields_impl.hpp  StateInterp.hpp  VectorFields.hpp  VectorFields_impl.hpp
include/ode/Interpolation/Regular/: Grids.hpp  Grids_impl.hpp  RegularGridInterpolator.hpp  RegularGridInterpolator_impl.hpp
include/ode/Interpolation/Scattered/: Delaunay.hpp  Delaunay_impl.hpp  ScatteredNdInterpolator_impl.hpp
include/ode/Interpolation/Univariate/: StateInterp.hpp  StateInterp_impl.hpp
include/ode/OdeResult/: OdeResult.hpp  OdeResult_impl.hpp
include/ode/Solvers/: BDF.hpp  BDF_impl.hpp  DOP853.hpp  DOP853_IMPL.hpp  DOP853_impl.hpp  DOPRI.hpp  DOPRI_IMPL.hpp  DOPRI_impl.hpp  Euler.hpp  Euler_IMPL.hpp  Euler_impl.hpp  RungeKutta.hpp  RungeKutta_impl.hpp  Solvers.hpp  Solvers_IMPL.hpp
include/odepack/: adaptive_solver_impl.hpp  bdf.hpp  customsolver.hpp  dop853.hpp  euler.hpp  events.hpp  fixed_solver_impl.hpp  grid_interp.hpp  interpolators.hpp  lsoda.hpp  ndspan.hpp  ode.hpp  odesolvers.hpp  pyode.hpp  pyodepack.hpp  rich_solver.hpp  rk_adaptive.hpp  solver_impl.hpp  solverbase.hpp  solvers.hpp  solverstate.hpp  states.hpp  stiff.hpp  tensors.hpp  tools.hpp  variational.hpp  virtualsolver.hpp
include/odepack/mcmc/: tools.hpp
include/odepack/ndspan/: arrays.hpp  layoutmap.hpp  ndtools.hpp  ndview.hpp
include/odepack/ndspan/layouts/: standard_layouts.hpp
include/odepack/ode/: OdeInt.hpp  OdeInt_impl.hpp  SolverDispatcher.hpp  SolverDispatcher_impl.hpp  Tools.hpp  Tools_impl.hpp
include/odepack/ode/Chaos/: VariationalSolvers.hpp  VariationalSolvers_impl.hpp
include/odepack/ode/Core/: Dispatcher.hpp  Events_impl.hpp  FinDiff.hpp  ObjectiveSolver.hpp  RichBase.hpp  RichBase_impl.hpp  SolverBase.hpp  SolverBase_impl.hpp  VirtualBase.hpp
include/odepack/ode/Interpolation/: NdInterpolator.hpp  NdInterpolator_impl.hpp  VectorFields.hpp  VectorFields_impl.hpp
include/odepack/ode/OdeResult/: OdeResult_impl.hpp
include/odepack/polybox/: polybox.hpp
include/polybox/: polybox.hpp
include/pyode/: PYODE.hpp  mpreal_caster.hpp  pyode.cpp  pyode.hpp  pyode_IMPL.hpp  pyode_impl.hpp  pytools.hpp  pytools_impl.hpp
include/pyode/bindings/: PyChaos.hpp  PyEvents.hpp  PyField.hpp  PyFunc.hpp  PyOde.hpp  PyResult.hpp  PySolver.hpp  PySubSolver.hpp
include/pyode/bindings_impl/: PyChaos_impl.hpp  PyEvents_impl.hpp  PyField_impl.hpp  PyOde_impl.hpp  PyResult_impl.hpp  PySolver_impl.hpp
include/pyode/lib/: PyChaos.hpp  PyEvents.hpp  PyField.hpp  PyInterp.hpp  PyOde.hpp  PyResult.hpp  PySolver.hpp  PySubSolver.hpp  PyTools.hpp
include/pyode/lib_impl/: PyChaos_impl.hpp  PyEvents_impl.hpp  PyField_impl.hpp  PyOde_impl.hpp  PyResult_impl.hpp  PySolver_impl.hpp  PyTools_impl.hpp
include/pyode/pytools/: pytools.hpp  pytools_impl.hpp
python/: CMakeLists.txt  odepack.pyi  pyode.cpp  pyproject.toml
python/odepack/: __init__.py  _event_opts.pyi  _temp_odesolvers.pyi  chaos.pyi  common.pyi  events.pyi  fields.pyi  interp.pyi  interpolate.py  ode.pyi  oderesult.pyi  odesolvers.pyi  odesolvers_base.pyi  odesolvers_double.pyi  odesolvers_float.pyi  odesolvers_longdouble.pyi  odesolvers_mpreal.pyi  solvers.pyi  symode.py  vectorfields.py
python/py_tests/: full_interp_test.py  interactive_psos.py  interp_test.py  interpolators_test.py  nd_interpolation.py  odeint.ipynb  rgi_test.py
python/src/: bindings.cpp  chaos.cpp  common.cpp  event_opts.cpp  events.cpp  fields.cpp  mpreal_caster.hpp  ode.cpp  ode_caster.hpp  oderesult.cpp  pyode.cpp  pyode.hpp  pyode_double.cpp  pyode_float.cpp  pyode_longdouble.cpp  pyode_mpreal.cpp  pytools.hpp  solvers.cpp
python/src/bindings/: PyChaos.cpp  PyEvents.cpp  PyField.cpp  PyFunc.cpp  PyOde.cpp  PyResult.cpp  PySolver.cpp  PySubSolver.cpp  PyTools.cpp  chaos.cpp  events.cpp  fields.cpp  interp.cpp  ode.cpp  oderesult.cpp  odetemplates.hpp  solvers.cpp
python/src/staticlib/: PyChaos.cpp  PyEvents.cpp  PyField.cpp  PyInterp.cpp  PyOde.cpp  PyResult.cpp  PySolver.cpp  PySubSolver.cpp  PyTools.cpp
python/tests/: odeint.ipynb
src/: events.hpp  explicit.hpp  get_solvers.hpp  ode.hpp  odesolvers.hpp  operation.hpp  pyode.hpp  rk_adaptive.hpp  rk_classic.hpp  solvers.hpp  states.hpp  stiff.hpp  tensors.hpp  tools.hpp  variational.hpp  vectorized.hpp
tests/: lazy_eval_test.cpp  oscillator_solver.cpp  test  test.cpp  test_obj.cpp  variational_test.cpp
(+36 files in other folders)
