[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "odepack"
version = "0.1.0"
description = "A Python package for solving ordinary differential equations"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.scikit-build]
# Scikit-build-core settings
cmake.build-type = "Debug"
wheel.packages = ["odepack"]
